romoção de espaçamentos na seção evento entre imagem e texto adição de espaçamento entre titulo e imagem

--- a/index.html
+++ b/index.html
@@ -101,11 +101,14 @@
         </section>
         <section id="eventos" class="pt-5 pb-5">
             <div class="container">
-                <div class="row mb-2">
+                <div class="row mb-5">
+                    <h2 class="section-title text-center">Para todas <span class="text-colored">as ocasiões</span></h2>
+                </div>
+                <div class="row">
                     <div class="col-md-4">
                         <img src="images/eventos/aniversario.jpg" alt="" class="d-block w-100 rounded">
                     </div>
-                    <div class="col-md-8 ps-4 pt-5">
+                    <div class="col-md-8 ps-4 pt-2 pb-2">
                         <h3 class="section-title text-colored fs-4">
                             <i class="bi bi-calendar-heart-fill"></i>
                             Aniversários
@@ -119,7 +122,7 @@
                     <div class="col-md-4">
                         <img src="images/eventos/casamento.jpg" alt="" class="d-block w-100 rounded">
                     </div>
-                    <div class="col-md-8 ps-4 pt-5">
+                    <div class="col-md-8 ps-4 pt-2 pb-2">
                         <h3 class="section-title text-colored fs-4">
                             <i class="bi bi-arrow-through-heart-fill"></i>
                             Recepção para casamentos
@@ -133,7 +136,7 @@
                     <div class="col-md-4">
                         <img src="images/eventos/confraternizacoes.jpg" alt="" class="d-block w-100 rounded">
                     </div>
-                    <div class="col-md-8 ps-4 pt-5">
+                    <div class="col-md-8 ps-4 pt-2">
                         <h3 class="section-title text-colored fs-4">
                             <i class="bi bi-people-fill"></i>
                             Confraternizações
